# darkbird

./: Cargo.toml  README.md  lib.rs
example/: Indexing.rs  before-vsn-6.1.0-migration.rs  complex.rs  database-level-vsn6.rs  database-level.rs  fullText.rs  materializedView.rs  migrate_to_another_database.rs  new_features_vsn2.rs  range.rs  reporter.rs  simple.rs  taging.rs  update_schema.rs
example/Version-3.0.0 ( Indexing - Tagging )/: Indexing.rs  range.rs  taging.rs
example/Version-3.5.0 ( Fulltext Search )/: example.rs
example/Version-4.0.0 ( Materialized View )/: example.rs
example/Version-6.1.0 ( Migration - Backup )/: backup-restore.rs  migration.rs
example/Version-6.2.0 ( Vector Engine )/: example.rs
server/: mod.rs  server.rs  transport.rs
server/model/: collection.rs  document.rs  document_config.rs  engine.rs  mod.rs
src/: blackbird.rs  darkbird.rs  lib.rs  main.rs
src/blackbird/: disk_log.rs  migration.rs  router.rs  storage.rs
src/darkbird/: database.rs  disk_log.rs  document.rs  indexer.rs  persistent_worker.rs  router.rs  schema.rs  storage.rs  storage_redis.rs  storage_vector.rs  storage_vector_test.rs  vector.rs
src/darkbird/index/: hash.rs  inverted_index.rs  mod.rs  range.rs  tags.rs
src/darkbird/wal/: disk_log.rs  helper.rs  memory_page.rs  mod.rs  page_processor.rs
