[package]
name = "blackbird"
version = "0.1.0"
edition = "2021"
authors = ["DanyalMhai@gmail.com"]
readme = "README.md"
description = "High concurrency, RealTime, In-memory storage inspired by erlang mnesia"
license = "Apache-2.0"
keywords = ["in-memory", "storage", "durable", "high-concurrency", "database"]
homepage   = "https://github.com/Rustixir/blackbird"
repository = "https://github.com/Rustixir/blackbird"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.17.0", features = ["rt-multi-thread", "time", "macros", "sync"] }
simple_wal = "0.3.0"
dashmap = "5.2.0"
serde_derive = "1.0.136"
serde        = "1.0.136"
bincode      = "1.3.3"
